--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,6 +9,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
    <com.spencer_studios.autoracerretro.GameView
+       android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
 
