--- a/app/src/main/res/layout/content_title.xml
+++ b/app/src/main/res/layout/content_title.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#ffffff"
+    android:background="#000000"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:orientation="vertical"
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="40sp"
-        android:textColor="#0000ff"
+        android:textColor="#f44336"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:fontFamily="@font/press_start_2p"
@@ -29,7 +29,7 @@
         android:layout_marginTop="8dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
-        android:textColor="#ff0000"
+        android:textColor="#ffffff"
         android:fontFamily="@font/press_start_2p"
         android:textSize="22dp"
         android:text="HI: 21"/>
@@ -43,7 +43,7 @@
         android:paddingTop="12dp"
         android:paddingEnd="8dp"
         android:paddingStart="8dp"
-        android:background="#00ff00"
+        android:background="#4caf50"
         android:textColor="#fff"
         android:text="PLAY"
         android:fontFamily="@font/press_start_2p"
